# EZModbus

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml  library.json  platformio.ini
examples/bridge/: rtu-tcp_main.cpp
examples/client/: rtu_main.cpp  tcp_main.cpp
examples/dmx/: ModbusDMX.h
examples/esp-idf/bridge/: CMakeLists.txt  README.md
examples/esp-idf/main_rtu-client-server/: CMakeLists.txt  main.cpp
examples/esp-idf/rtu-client/: CMakeLists.txt  README.md
examples/esp-idf/rtu-client-server-loopback/: CMakeLists.txt  README.md
examples/esp-idf/rtu-server/: CMakeLists.txt  (+1 more)
examples/json-http/: ModbusHTTP.h  http-server_main.cpp
examples/server/: rtu_main.cpp  tcp_main.cpp
src/: EZModbus.h
src/apps/: ModbusBridge.h  ModbusBridge.hpp  ModbusClient.cpp  ModbusClient.h  ModbusServer.cpp  ModbusServer.h
src/core/: ModbusCodec.h  ModbusCodec.hpp  ModbusCore.h  ModbusFrame.hpp  ModbusTypes.h  ModbusTypes.hpp  ModbusWord.hpp
src/drivers/: ModbusHAL_TCP.cpp  ModbusHAL_TCP.h  ModbusHAL_UART.cpp  ModbusHAL_UART.h
src/interfaces/: ModbusInterface.h  ModbusInterface.hpp  ModbusRTU.cpp  ModbusRTU.h  ModbusTCP.cpp  ModbusTCP.h
src/utils/: ModbusDebug.h  ModbusDebug.hpp  ModbusLogger.h  ModbusLogger.hpp
test/: README.md
test/test_bridge_loopback/: dummy_interface.h  test_main.cpp
test/test_codec/: test_main.cpp
test/test_rtu_client_loopback/: test_main.cpp  test_params.h
test/test_rtu_server_loopback/: ModbusTestAgent.h  ModbusTestClient.h  test_helpers.h  test_main.cpp
test/test_tcp_client_loopback/: test_main.cpp  test_params.h
(+37 files in other folders)
